# page-mind

./: .gitignore  README.md  app_gradio.py  config.py  env.example  models.py  pyproject.toml  requirements.txt  services.py
core/: book_recommender.py  counseling_analyzer.py  psychology_chatbot.py
core_crewai/: __init__.py  agents.py  book_reranker.py  config.py  counselor_tools.py  crew_orchestrator.py  crewai_tools.py  models.py  tasks.py
core_crewai/text_prompts/: analysis_task_description.txt  analyzer_backstory.txt  book_recommendation_task_description.txt  counseling_task_description.txt  counselor_backstory.txt  recommender_backstory.txt
page-mind/: app_gradio.py  requirements.txt
page-mind/pagemind/: README.md  pyproject.toml
page-mind/pagemind/src/pagemind/: main.py  models.py
page-mind/pagemind/src/pagemind/config/: agents.yaml  tasks.yaml
page-mind/pagemind/src/pagemind/tools/: book_search_tool.py
src/pagemind/: book_reranker.py  crew.py
src/pagemind/config/: agents.yaml  tasks.yaml
src/pagemind/tools/: __init__.py  counselor_tool.py
