[project]
name = "pagemind"
version = "0.1.0"
description = "pagemind using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.6.1",
]

[project.scripts]
pagemind = "pagemind.main:run"
run_crew = "pagemind.main:run"
train = "pagemind.main:train"
replay = "pagemind.main:replay"
test = "pagemind.main:test"
run_with_trigger = "pagemind.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
